kind_nginx_grpc/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcbin
  labels:
    app: grpcbin
spec:
  type: NodePort
  ports:
  - name: grpc
    port: 9000
  selector:
    app: grpcbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcbin
  template:
    metadata:
      labels:
        app: grpcbin
    spec:
      containers:
      - image: moul/grpcbin # https://hub.docker.com/r/moul/grpcbin
        name: grpcbin
        ports:
        - containerPort: 9000 # insecure port
