kind_nginx_grpc/ingress_0.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpcbin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: grpcbin
          servicePort: insecure
