kind_nginx_grpc/ingress_2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpcbin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - host: myexample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grpcbin
          servicePort: insecure
  tls:
    - secretName: tls-secret
      hosts:
        - myexample.com
