kind_nginx_grpc/ingress_3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpcbin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    # IP-address 127.0.0.1 must be used, not "localhost"
  - host: 127.0.0.1.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grpcbin
          servicePort: insecure
